force-app/main/default/objects/Travefy_Document_POE__c/Travefy_Document_POE__c.object-meta.xml
<CustomObject>
    <label>Travefy Document</label>
    <nameField>
        <label>Travefy Documentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travefy Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>