force-app/main/default/objects/Travefy_Document_POE__c/fields/Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone Number</label>
    <type>Text</type>
</CustomField>