force-app/main/default/objects/Travefy_Document_POE__c/fields/deal_image__c.field-meta.xml
<CustomField>
    <fullName>deal_image__c</fullName>
    <formula>IF(NOT(ISBLANK( departures_dates__r.Deal__c )), departures_dates__r.Deal__r.PDF_Image__c,
IF(NOT(ISBLANK( departures_dates__r.options__c )),  departures_dates__r.options__r.Deal__r.PDF_Image__c,
 departures_dates__r.sub_options__r.options__r.Deal__r.PDF_Image__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Image</label>
    <type>Text</type>
</CustomField>