force-app/main/default/objects/Travefy_Document_POE__c/fields/exclude_sending_tp__c.field-meta.xml
<CustomField>
    <fullName>exclude_sending_tp__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_exclude_sending_tp__c</formula>
    <label>Exclude Sending TP</label>
    <type>Checkbox</type>
</CustomField>