force-app/main/default/objects/Travefy_Document_POE__c/fields/Generate_PDF__c.field-meta.xml
<CustomField>
    <fullName>Generate_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate PDF</label>
    <type>Checkbox</type>
</CustomField>