force-app/main/default/objects/Travefy_Document_POE__c/fields/Generate_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Generate_PDF_URL__c</fullName>
    <formula>&quot;https://www.tripadeal.com.au/genTravPdf/&quot;&amp;Order_Line_Item__r.TAD_Order_OLI_SFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate PDF URL</label>
    <type>Text</type>
</CustomField>