force-app/main/default/objects/Travefy_Document_POE__c/fields/JSON_TripFull_Request__c.field-meta.xml
<CustomField>
    <fullName>JSON_TripFull_Request__c</fullName>
    <label>JSON TripFull Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>