force-app/main/default/objects/Travefy_Document_POE__c/fields/option_title__c.field-meta.xml
<CustomField>
    <fullName>option_title__c</fullName>
    <formula>ordexp_tad_order__r.ordexp_option__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Title</label>
    <type>Text</type>
</CustomField>