force-app/main/default/objects/Travefy_Document_POE__c/fields/order_number_text__c.field-meta.xml
<CustomField>
    <fullName>order_number_text__c</fullName>
    <formula>IF( ordexp_tad_order__r.order__c ==null , ordexp_tad_order__r.Name, ordexp_tad_order__r.order__r.Name)</formula>
    <label>order number text</label>
    <type>Text</type>
</CustomField>