force-app/main/default/objects/Travefy_Document_POE__c/fields/ordexp_Purchaser_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Purchaser_First_Name__c</fullName>
    <formula>IF(OR(ordexp_tad_order__r.ordexp_account__r.RecordType.Name = &apos;Product Partner&apos;,ordexp_tad_order__r.ordexp_account__r.RecordType.Name = &apos;PAF Corp Client&apos;), ordexp_tad_order__r.ordexp_account__r.Name , ordexp_tad_order__r.ordexp_account__r.FirstName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser First Name</label>
    <type>Text</type>
</CustomField>