force-app/main/default/objects/Travefy_Document_POE__c/fields/PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_URL__c</fullName>
    <label>PDF URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>