force-app/main/default/objects/Travefy_Document_POE__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <formula>TEXT ( ordexp_tad_order__r.ordexp_referrer__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral</label>
    <type>Text</type>
</CustomField>