force-app/main/default/objects/Travefy_Document_POE__c/fields/Send_Comms_Now__c.field-meta.xml
<CustomField>
    <fullName>Send_Comms_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets updated to True when your TP Sent on TAD Order is set to true</description>
    <label>Send Comms Now</label>
    <type>Checkbox</type>
</CustomField>