force-app/main/default/objects/Travefy_Document_POE__c/fields/Send_to_Travefy__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Travefy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Travefy</label>
    <type>Checkbox</type>
</CustomField>