force-app/main/default/objects/Travefy_Document_POE__c/fields/send_tp__c.field-meta.xml
<CustomField>
    <fullName>send_tp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send TP to customer</label>
    <type>Checkbox</type>
</CustomField>