force-app/main/default/objects/Travefy_Document_POE__c/fields/Send_TP_from_AP__c.field-meta.xml
<CustomField>
    <fullName>Send_TP_from_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send TP from AP</label>
    <type>Checkbox</type>
</CustomField>