force-app/main/default/objects/Travefy_Document_POE__c/fields/send_travefy_request__c.field-meta.xml
<CustomField>
    <fullName>send_travefy_request__c</fullName>
    <formula>OR( send_tripfull_request__c ,  send_tripusers_request__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Travefy Request</label>
    <type>Checkbox</type>
</CustomField>