force-app/main/default/objects/Travefy_Document_POE__c/fields/send_tripusers_request__c.field-meta.xml
<CustomField>
    <fullName>send_tripusers_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send TripUsers Request</label>
    <type>Checkbox</type>
</CustomField>