force-app/main/default/objects/Travefy_Document_POE__c/fields/travefy_trip_id__c.field-meta.xml
<CustomField>
    <fullName>travefy_trip_id__c</fullName>
    <label>Travefy Trip Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>