force-app/main/default/objects/Travefy_Document_POE__c/fields/trip_purchaser_email__c.field-meta.xml
<CustomField>
    <fullName>trip_purchaser_email__c</fullName>
    <label>Trip Purchaser Email</label>
    <type>Email</type>
</CustomField>