force-app/main/default/objects/Travefy_Document_POE__c/fields/trip_purchaser_first_name__c.field-meta.xml
<CustomField>
    <fullName>trip_purchaser_first_name__c</fullName>
    <label>Trip Purchaser First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>