force-app/main/default/objects/Travefy_Document_POE__c/fields/tripfull_last_sent__c.field-meta.xml
<CustomField>
    <fullName>tripfull_last_sent__c</fullName>
    <label>TripFull Last Sent</label>
    <type>DateTime</type>
</CustomField>